--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,14 @@ set(grpc_srcs "${CMAKE_CURRENT_BINARY_DIR}/mpointers.grpc.pb.cc")
 set(grpc_hdrs "${CMAKE_CURRENT_BINARY_DIR}/mpointers.grpc.pb.h")
 
 add_custom_command(
-      OUTPUT "${proto_srcs}" "${proto_hdrs}" "${grpc_srcs}" "${grpc_hdrs}"
-      COMMAND ${PROTOBUF_PROTOC_EXECUTABLE}
-      ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}"
+    OUTPUT "${proto_srcs}" "${proto_hdrs}" "${grpc_srcs}" "${grpc_hdrs}"
+    COMMAND ${PROTOBUF_PROTOC_EXECUTABLE}
+    ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}"
         --cpp_out "${CMAKE_CURRENT_BINARY_DIR}"
         -I "${proto_path}"
         --plugin=protoc-gen-grpc="${GRPC_CPP_PLUGIN_EXECUTABLE}"
         "${proto_file}"
-      DEPENDS "${proto_file}")
+    DEPENDS "${proto_file}")
 
 # Include generated *.pb.h files
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
@@ -48,6 +48,7 @@ target_link_libraries(mem-mgr
 
 # MPointers Test Client executable with UI
 add_executable(mpointers-client
+    src/Tests/TestMain.cpp
     src/MPointers/GRPCClient.cpp
     src/UI/MainWindow.cpp
     ${proto_srcs}
@@ -66,4 +67,5 @@ target_include_directories(mem-mgr PRIVATE
 
 target_include_directories(mpointers-client PRIVATE
     src/MPointers
-    src/UI)
+    src/UI
+    src/Tests)
